[project]
name = "topic-4-async-parser"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "xlrd>=2.0.1",
]
